--- a/normal.html
+++ b/normal.html
@@ -9,7 +9,7 @@
     <canvas width="600" height="600" id="canvas" onclick="update()"></canvas>
     <button id="button" onclick="flag_or_not()">flag</button>
     <h1 id=information></h1>
-    <a href="main.html"><button>main</button></a>
+    <a href="index.html"><button>main</button></a>
     <script type="text/javascript">let canves = document.getElementById("canvas");
 let information = document.getElementById("information");
 let button = document.getElementById("button");
