--- a/main.html
+++ b/main.html
@@ -1,1 +1,28 @@
 
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>minesweeper</title>
+    <style type="text/css">
+        button:hover {
+            transform: scale(1.25) perspective(3px)
+        }
+        *{
+            padding:auto;
+            margin:auto;
+            text-align:center;
+        }
+            </style>
+</head>
+<body>
+    <a href="easy.html"><button>easy</button></a>
+    <br>
+    <a href="normal.html"><button>normal</button></a>
+    <br>
+    <a href="hard.html"><button>hard</button></a>
+    <br>
+    <a href="extremly hard.html"><button>extramly hard</button></a>
+</body>
+</html>
